latte/tests/good/str_gc0.lat
int main() {
  printInt(4);
  if ("asd" == "bcd" || "edf" == "cde") {
    return 1;
  }
  return 0;
}
