latte/tests/bad/class_hierarchy/duplicate.lat
class A {}

class A {}

int main() {
  return 0;
}
